# worker

./: .gitignore  README.md  TEST_RUNNER_README.md  config.bad_rtsp.json  config.sample.json  config.sample.yaml  config.video.json  config.webcam.json  main.py  main_new.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: test.yml
config/: parse_config.py
cvkitio_worker/: __init__.py  __main__.py  main.py
cvkitio_worker/config/: __init__.py  parse_config.py
cvkitio_worker/detectors/: detect_worker.py  frame.py  frame_worker.py  loader.py
cvkitio_worker/detectors/detectors/: face_detect.py
cvkitio_worker/receivers/: loader.py
detect/: detect_worker.py  frame.py  frame_worker.py  loader.py  worker.py
detect/detectors/: detector.py  face_detect.py
docs/: timing_measurement.md
examples/: README.md  config.aspect_ratio.json  config.timing.json  config.workers.json  probe_unified.py  probe_video.py
kaggle_faces/: faces_summary.txt
models/: download_models.py
receiver/: loader.py
scripts/: README.md  cleanup.sh  cleanup_processes.py  download_models.py  download_test_videos.py  test_graceful_shutdown.py  test_webcam_scaling.py
src/cvkitworker/: __main__.py
src/cvkitworker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cvkitworker/detectors/: detect_worker.py  frame_worker.py  loader.py
src/cvkitworker/detectors/detectors/: face_detect.py
src/cvkitworker/receivers/: loader.py
src/cvkitworker/refactor/: README.md  framechain.py  framechain2.py  main.py
src/cvkitworker/refactor/framechain/: models.py
src/cvkitworker/refactor/framechain/core/: __init__.py  frame_processing.py
src/cvkitworker/refactor/framechain/detectors/: face_detector.py
src/cvkitworker/refactor/framechain/markupers/: __init__.py  face_markup.py
src/cvkitworker/refactor/framechain/outputers/: __init__.py  output_file.py
src/cvkitworker/refactor/framechain/preprocessors/: __init__.py  scale.py
src/cvkitworker/tmp/framechain/: base.py
src/cvkitworker/tmp/framechain/core/: processor_chain.py
src/cvkitworker/tmp/framechain/detectors/: __init__.py
src/cvkitworker/utils/: __init__.py  probe.py  shared_buffer.py  webcam_probe.py
test_data_kaggle/: face_detection_test_results.json  test_metadata.json
test_videos/: README.md
tests/: TEST_FIXES_SUMMARY.md  create_kaggle_test_dataset.py  download_kaggle_faces.py  download_test_videos.py  test_kaggle_face_detection.py  test_probe.py  test_resize_aspect_ratio.py  test_shared_memory_buffer.py  test_timing.py  test_video_integration.py  test_video_processing.py  test_video_simple.py  test_worker_config.py
